checked the Spanish translation of the menus and the Italian translation of the widgets

--- a/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Menus_es.properties
+++ b/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Menus_es.properties
@@ -11,9 +11,9 @@ IMPORT\ CSV=Importar CSV
 
 EXPORT=Exportar
 
-REMOVE\ LINK\ TO\ DIRECTORY=Quitar enlace a directorio
+REMOVE\ LINK\ TO\ DIRECTORY=Quitar v\u00ednculo al directorio
 
-SHOW\ HIDDEN\ FILES=Mostrar archivos escondidos
+SHOW\ HIDDEN\ FILES=Mostrar archivos ocultos
 
 ADD\ WORKING\ DIRECTORY=Agregar directorio de trabajo
 
@@ -21,7 +21,7 @@ REMOVE\ REMOTE\ LOCATION=Quitar ubicaci\u00f3n remota
 
 ADD\ DEFAULT\ LOCATIONS=Agregar ubicaciones predeterminadas 
 
-THE\ DEFAULT\ LOCATIONS\ ALREADY\ EXISTS\ AND\ WILL\ NOT\ BE\ ADDED\ AGAIN=Las ubicaciones predeterminadas ya existen y no se agregrar\u00e1n nuevamente
+THE\ DEFAULT\ LOCATIONS\ ALREADY\ EXISTS\ AND\ WILL\ NOT\ BE\ ADDED\ AGAIN=Las ubicaciones predeterminadas ya existen y no ser\u00e1n agregadas otra vez
 
 ADD\ DEFAULT\ REMOTE\ LOCATIONS=Agregar ubicaciones remotas predeterminadas
 
@@ -31,17 +31,17 @@ ADD\ REMOTE\ LOCATION=Agregar ubicaci\u00f3n remota
 
 HISTORY=Historial
 
-CHECK\ XML\ CONFORMANCE=Comprobar conformidad XML
+CHECK\ XML\ CONFORMANCE=Comprobar conformidad con XML
 
 REMOVE\ FROM\ FAVOURITES\ LIST=Quitar de la lista de favoritos 
 
-ADD\ TO\ FAVOURITES\ LIST=Agregar a lista de favoritos
+ADD\ TO\ FAVOURITES\ LIST=Agregar a la lista de favoritos
 
-ADD\ CHILDREN\ TO\ FAVOURITES\ LIST=Agregar nodos secundarios a lista de favoritos
+ADD\ CHILDREN\ TO\ FAVOURITES\ LIST=Agregar nodos secundarios a la lista de favoritos
 
 ADD\ BULK\ RESOURCES\ VIA\ FAVOURITES=Agregar recursos en masa mediante lista de favoritos 
 
-ADD\ FROM\ FAVOURITES=Agregar desde lista de favoritos
+ADD\ FROM\ FAVOURITES=Agregar desde la lista de favoritos
 
 ADD=Agregar
 
@@ -57,7 +57,7 @@ NO\ NODE\ SELECTED=Ning\u00fan nodo seleccionado
 
 DELETE=Eliminar
 
-VIEW/EDIT\ SELECTED=Ver/editar nodo(s) seleccionados
+VIEW/EDIT\ SELECTED=Ver/editar nodo(s) seleccionado(s)
 
 VIEW\ IN\ LONG\ FIELD\ EDITOR=Ver con editor de texto largo
 
@@ -73,19 +73,19 @@ REMOVE\ SELECTED\ ROWS=Quitar filas seleccionadas de la tabla
 
 VIEW\ SELECTED\ ROWS=Ver filas seleccionadas
 
-CLEAR\ CELL\ HIGHLIGHT=Borrar celdas resaltadas
+CLEAR\ CELL\ HIGHLIGHT=Borrar resaltado de las celdas
 
 HIGHLIGHT\ MATCHING\ CELLS=Resaltar celdas coincidentes
 
 COPY\ CELL\ TO\ WHOLE\ COLUMN=Copiar celda en toda la columna
 
-CANNOT\ COPY\ THIS\ TYPE\ OF\ FIELD=No se pudo copiar este tipo de campo
+CANNOT\ COPY\ THIS\ TYPE\ OF\ FIELD=No se puede copiar este tipo de campo
 
 REVERT\ SELECTED\ FIELDS=Revertir campos seleccionados
 
 DELETE\ FIELD=Eliminar campo
 
-DELETE\ MULTIFIELD=Eliminar campos
+DELETE\ MULTIFIELD=Eliminar multi-campo
 
 SHOW\ CHILD\ NODES=Mostrar nodos secundarios
 
@@ -109,7 +109,7 @@ YES=s\u00ed
 
 RUN\ SETUP\ WIZARD=Ejecutar asistente para instalaci\u00f3n
 
-ABOUT=Arbil
+ABOUT=Acerca de
 
 HELP=Gu\u00eda
 
@@ -121,9 +121,9 @@ CLOSE\ ALL\ WINDOWS=Cerrar todas las ventanas
 
 RESET\ WINDOWS=Restablecer ventanas
 
-RESET\ ALL\ WINDOWS\ TO\ DEFAULT\ SIZE\ AND\ LOCATION?=\u00bfRestablecer el tama\u00f1o y la ubicaci\u00f3n de todas las ventanas?
+RESET\ ALL\ WINDOWS\ TO\ DEFAULT\ SIZE\ AND\ LOCATION?=\u00bfRestablecer la ubicaci\u00f3n y el tama\u00f1o predeterminados de todas las ventanas?
 
-RESET\ WINDOW\ LOCATIONS=Restablecer ubicaci\u00f3n de la ventana
+RESET\ WINDOW\ LOCATIONS=Restablecer ubicaciones de la ventana
 
 WINDOW=Ventana
 
@@ -133,13 +133,13 @@ PLUGIN\ ERROR=Error en el complemento
 
 COULD\ NOT\ LOAD\ PLUGIN\:\ {0}=No se pudo cargar el complemento: {0}
 
-EDIT\ COLUMN\ VIEWS=Editar vista columnas
+EDIT\ COLUMN\ VIEWS=Editar vista de columna
 
-COLUMN\ VIEW\ FOR\ NEW\ TABLES=Vista en columnas para las nuevas tablas
+COLUMN\ VIEW\ FOR\ NEW\ TABLES=Vista de columna para las nuevas tablas
 
-SHOW\ LANGUAGE\ IN\ COLUMN\ NAME=Mostrar idioma con el nombre de la columna
+SHOW\ LANGUAGE\ IN\ COLUMN\ NAME=Mostrar idioma en el nombre de la columna
 
-TRACK\ TABLE\ SELECTION\ IN\ TREE=Seguir selecci\u00f3n de tabla en el \u00e1rbol
+TRACK\ TABLE\ SELECTION\ IN\ TREE=Seguir selecci\u00f3n de la tabla en el \u00e1rbol
 
 THIS\ OPTION\ CHECKS\ ALL\ LOCAL\ METADATA\ FILES\ FOR\ XML\ CONFORMANCE\ EVERY\ TIME\ THEY\ ARE\ LOADED.\ IF\ THE\ METADATA\ FILE\ DOES\ NOT\ VALIDATE\ AGAINST\ THE\ SCHEMA\ IT\ WILL\ BE\ HIGHLIGHTED\ RED\ IN\ THE\ TREE.=Esta opci\u00f3n comprueba la conformidad de todos los archivos locales de metadatos con XML cada vez que \u00e9stos son importados. Si el archivo de metadatos no se valida con el esquema, estar\u00e1 resaltado de rojo en el \u00e1rbol.
 
@@ -153,7 +153,7 @@ CHECK\ PERMISSIONS\ FOR\ REMOTE\ RESOURCES=Comprobar permisos para recursos remo
 
 WHEN\ ADDING\ A\ NEW\ RESOURCE\ TO\ A\ SESSION\ THIS\ OPTIONS\ WILL\ COPY\ THE\ FILE\ INTO\ THE\ LOCAL\ CACHE\ RATHER\ THAN\ LINKING\ TO\ ITS\ CURRENT\ LOCATION.\ THIS\ OPTION\ CAN\ MAKE\ A\ CONSIDERABLE\ DIFFERENCE\ TO\ DISK\ USE\ IF\ YOU\ ARE\ HANDLING\ LARGE\ FILES.=Cuando se agrega un nuevo recurso a una sesi\u00f3n, el archivo es copiado en la cach\u00e9 local y no enlazado con su ubicaci\u00f3n actual. Esta opci\u00f3n puede mejorar notablemente el uso del disco si se utilizan archivos de grande formato.
 
-COPY\ NEW\ RESOURCES\ INTO\ CACHE=Copiar nuevos recursos en cach\u00e9
+COPY\ NEW\ RESOURCES\ INTO\ CACHE=Copiar nuevos recursos en la cach\u00e9
 
 CHECK\ FOR\ NEW\ VERSION\ ON\ START=Buscar nueva versi\u00f3n durante la ejecuci\u00f3n de la aplicaci\u00f3n
 
@@ -161,7 +161,7 @@ SHOW\ STATUS\ BAR=Mostrar barra de estado
 
 SHOW\ SELECTION\ PREVIEW=Mostrar vista previa de la selecci\u00f3n
 
-SAVE\ WINDOWS\ ON\ EXIT=Guardar ventanas antes de salir 
+SAVE\ WINDOWS\ ON\ EXIT=Guardar ventanas al salir de la applicaci\u00f3n
 
 RE-DOWNLOAD\ CURRENT\ VOCABULARIES=Volver a descargar vocabularios actuales 
 
@@ -189,7 +189,7 @@ COPY=Copiar
 
 EDIT=Editar
 
-INVALID\ LOGOUT\ URL\:\ {0}=URL de logout no v\u00e1lido
+INVALID\ LOGOUT\ URL\:\ {0}=URL de logout no v\u00e1lido:\n{0}
 
 LOGOUTURL=URL de logout
 
@@ -203,7 +203,7 @@ EXIT=Salir
 
 IMPORT...=Importar...
 
-MODIFIED\ NODES=Nodos modficados
+MODIFIED\ NODES=Nodos modificados
 
 SHOW\ MODIFIED\ NODES=Mostrar nodos modificados
 
@@ -211,17 +211,17 @@ SAVE\ CHANGES=Guardar cambios
 
 FILE=Archivo
 
-PARSER\ ERROR\ WHILE\ TRYING\ TO\ READ\ HELP\ SYSTEM!\ SEE\ ERROR\ LOG\ FOR\ DETAILS.=\u00a1Error en el analizador durante la lectura del sistema de ayuda! Ver registro de error para m\u00e1s detalles.
+PARSER\ ERROR\ WHILE\ TRYING\ TO\ READ\ HELP\ SYSTEM!\ SEE\ ERROR\ LOG\ FOR\ DETAILS.=\u00a1Error del analizador durante la lectura del sistema de ayuda! Ver registro de errores para m\u00e1s detalles.
 
 ERROR=Error
 
-I/O\ ERROR\ WHILE\ TRYING\ TO\ READ\ HELP\ SYSTEM!\ SEE\ ERROR\ LOG\ FOR\ DETAILS.=Error I/O durante la lectura del sistema de ayuda! Ver registro de errores para m\u00e1s detalles.
+I/O\ ERROR\ WHILE\ TRYING\ TO\ READ\ HELP\ SYSTEM!\ SEE\ ERROR\ LOG\ FOR\ DETAILS.=\u00a1Error de I/O durante la lectura del sistema de ayuda! Ver registro de errores para m\u00e1s detalles.
 
-ARBILMENUBAR\ REQUIRES\ ARBILWINDOWMANAGER.\ FOUND\ {0}=ArbilMenuBar necesita ArbilWindowManager. Encontrado {o}
+ARBILMENUBAR\ REQUIRES\ ARBILWINDOWMANAGER.\ FOUND\ {0}=ArbilMenuBar requiere ArbilWindowManager. Encontrado {o}
 
-ARBILMENUBAR\ REQUIRES\ ARBILTREEHELPER.\ FOUND\ {0}=ArbilMenuBar necesita ArbilTreeHelper. Encontrado {0}
+ARBILMENUBAR\ REQUIRES\ ARBILTREEHELPER.\ FOUND\ {0}=ArbilMenuBar requiere ArbilTreeHelper. Encontrado {0}
 
-EXPORT\ FAILED=Error de exportaci\u00f3n
+EXPORT\ FAILED=Error al exportar
 
 EXPORT\ TO\ HTML\ FAILED.\ CHECK\ THE\ ERROR\ LOG\ FOR\ DETAILS.=No se pudo exportar a HTML. Ver registro de errores para m\u00e1s detalles.
 
@@ -229,7 +229,7 @@ EXPORT\ IMDI\ TO\ HTML=Exportar IMDI a HTML
 
 OPEN\ IMDI\ FORMATTED=Abrir IMDI con formato
 
-VIEW\ IMDI\ FORMATTED=Ver IMDi con formato
+VIEW\ IMDI\ FORMATTED=Ver IMDI con formato
 
 VIEW\ XML=Ver XML
 
@@ -246,26 +246,26 @@ ABOUT\ TO\ REPLACE\ ALL\ VALUES\ IN\ COLUMN\ {0}\ WITH\ THE\ VALUE\ {1}(<MULTIPL
 LOGOUT\ ERROR=Error en el logout
 COULD\ NOT\ REVERT\ VERSION,\ NO\ CHANGES\ MADE=No se pudo revertir la versi\u00f3n, ning\u00fan cambio realizado
 REMOVE\ SELECTED\ NODES\ FROM\ PARENT=Eliminar nodos seleccionados del nodo primario
-JUMP\ TO\ IN\ TREE=Saltar a en el \u00e1rbol
+JUMP\ TO\ IN\ TREE=Ver en el \u00e1rbol
 SHOW\ CONTEXT=Mostrar contexto
 SELECT\ MATCHING\ ROWS=Seleccionar filas coincidentes
 ERROR\ DELETING\ FIELDS,\ CHECK\ THE\ LOG\ FILE\ VIA\ THE\ HELP\ MENU\ FOR\ MORE\ INFORMATION.=Error en la eliminaci\u00f3n de los campos, ver registro de errores en el menu Gu\u00eda para m\u00e1s informaciones.
-DELETE\ {0}\ X\ {1}=Eliminar {1} campo "{0}"
-DELETE\ ATTRIBUTE\ {0}\ X\ {1}=Eliminar {1} atributo "{0}"
+DELETE\ {0}\ X\ {1}=Eliminar {1} campo(s) "{0}"
+DELETE\ ATTRIBUTE\ {0}\ X\ {1}=Eliminar {1} atributo(s) "{0}"
 NO\ UPDATES\ FOUND,\ CURRENT\ VERSION\ IS\ {0}=No se encontr\u00f3 ninguna actualizaci\u00f3n, la versi\u00f3n actual es {0}
-SAVE\ CURRENT\ COLUMN\ VIEW=Guarda visualizaci\u00f3n de columnas actual
+SAVE\ CURRENT\ COLUMN\ VIEW=Guarda vista de columna actual
 HIDE\ COLUMN=Oculta columna
 ALL\ COLUMNS=Todas las columnas
 THIS\ COLUMN=Esta columna ({0})
-DELETE\ FIELD\ FROM\ ALL\ NODES=Elimina campo desde todos los nodos
+DELETE\ FIELD\ FROM\ ALL\ NODES=Eliminar campo de todos los nodos
 FIXED\ COLUMN\ SIZE=Tama\u00f1o de las columnas fijo
 MAKE\ COLUMN\ FIT\ CONTENTS=Ajustar columna a su contenido
 MAKE\ ALL\ COLUMNS\ FIT\ CONTENTS=Ajustar todas las columnas a sus contenidos
-MAKE\ ALL\ COLUMNS\ THE\ SIZE\ OF=Ajustar todas las columnas al tama\u00f1o "{0}"
+MAKE\ ALL\ COLUMNS\ THE\ SIZE\ OF=Ajustar todas las columnas al tama\u00f1o de "{0}"
 COPY\ TABLE\ FOR\ WEBSITE=Copiar tabla para sitio web
-COLUMN\ VIEW\ FOR\ THIS\ TABLE=Visualizaci\u00f3n en columnas para esta tabla
+COLUMN\ VIEW\ FOR\ THIS\ TABLE=Vista de columna para esta tabla
 LIMIT\ VIEW\ TO\ CURRENT\ COLUMNS=Limitar visualizaci\u00f3n a las columnas actuales 
-EDIT\ THIS\ COLUMN\ VIEW=Editar visualizaci\u00f3n de esta columna
+EDIT\ THIS\ COLUMN\ VIEW=Editar esta vista de columna
 GROUP\ FAVOURITES\ BY\ TYPE=Agrupar favoritos seg\u00fan el tipo 
 IMPORT/EXPORT\ FAVOURITES=Importar/exportar favoritos
 FORCE\ TYPE\ CHECKING=Forzar chequeo de tipos
