--- a/src/main/resources/nl/mpi/arbil/localisation/Menus_it.properties
+++ b/src/main/resources/nl/mpi/arbil/localisation/Menus_it.properties
@@ -109,7 +109,7 @@ YES=s\u00ec
 
 RUN\ SETUP\ WIZARD=Esegui impostazione guidata
 
-ABOUT=Arbil
+ABOUT=Informazioni su
 
 HELP=Guida
 
@@ -133,9 +133,9 @@ PLUGIN\ ERROR=Errore di plugin
 
 COULD\ NOT\ LOAD\ PLUGIN\:\ {0}=Impossibile caricare il plugin: {0}
 
-EDIT\ COLUMN\ VIEWS=Modifica visualizzazione colonne
+EDIT\ COLUMN\ VIEWS=Modifica vista colonna
 
-COLUMN\ VIEW\ FOR\ NEW\ TABLES=Visualizzazione a colonne per nuove tabelle
+COLUMN\ VIEW\ FOR\ NEW\ TABLES=Vista colonna per nuove tabelle
 
 SHOW\ LANGUAGE\ IN\ COLUMN\ NAME=Mostra lingua nel nome della colonna
 
@@ -145,7 +145,7 @@ THIS\ OPTION\ CHECKS\ ALL\ LOCAL\ METADATA\ FILES\ FOR\ XML\ CONFORMANCE\ EVERY\
 
 ALWAYS\ CHECK\ LOCAL\ METADATA\ FILES\ FOR\ XML\ CONFORMANCE=Controlla sempre conformit\u00e0 dei file locali di metadati con il formato XML 
 
-THE\ SETTING\ CHANGE\ WILL\ BE\ EFFECTIVE\ WHEN\ ARBIL\ IS\ RESTARTED.=Le modifiche alle impostazioni verranno rese effettive dopo il riavvio di Arbil
+THE\ SETTING\ CHANGE\ WILL\ BE\ EFFECTIVE\ WHEN\ ARBIL\ IS\ RESTARTED.=Le modifiche alle impostazioni verranno rese effettive dopo il riavvio di Arbil.
 
 THIS\ OPTION\ CHECKS\ THE\ SERVER\ PERMISSIONS\ FOR\ REMOTE\ RESOURCES\ AND\ SHOWS\ ICONS\ ACCORDINGLY.=Questa opzione verifica le autorizzazioni del server per le risorse remote e mostra le icone corrispondenti.
 
@@ -155,7 +155,7 @@ WHEN\ ADDING\ A\ NEW\ RESOURCE\ TO\ A\ SESSION\ THIS\ OPTIONS\ WILL\ COPY\ THE\ 
 
 COPY\ NEW\ RESOURCES\ INTO\ CACHE=Copia nuove risorse nella cache 
 
-CHECK\ FOR\ NEW\ VERSION\ ON\ START=Verifica nuove versioni durante l'esecuzione dell'applicazione
+CHECK\ FOR\ NEW\ VERSION\ ON\ START=Verifica nuova versione durante l'esecuzione dell'applicazione
 
 SHOW\ STATUS\ BAR=Mostra barra di stato
 
@@ -163,7 +163,7 @@ SHOW\ SELECTION\ PREVIEW=Mostra anteprima selezione
 
 SAVE\ WINDOWS\ ON\ EXIT=Salva finestre prima di uscire
 
-RE-DOWNLOAD\ CURRENT\ VOCABULARIES=Scarica di nuovo vocabolari correnti
+RE-DOWNLOAD\ CURRENT\ VOCABULARIES=Riscarica elenchi di parole correnti
 
 EDIT\ IMDI\ LANGUAGE\ LIST...=Modifica elenco lingue IMDI...
 
@@ -215,7 +215,7 @@ PARSER\ ERROR\ WHILE\ TRYING\ TO\ READ\ HELP\ SYSTEM!\ SEE\ ERROR\ LOG\ FOR\ DET
 
 ERROR=Errore
 
-I/O\ ERROR\ WHILE\ TRYING\ TO\ READ\ HELP\ SYSTEM!\ SEE\ ERROR\ LOG\ FOR\ DETAILS.=Errore I/O durante la lettura del sistema di Guida! Visualizza log degli errori per maggiori dettagli.
+I/O\ ERROR\ WHILE\ TRYING\ TO\ READ\ HELP\ SYSTEM!\ SEE\ ERROR\ LOG\ FOR\ DETAILS.=Errore di I/O durante la lettura del sistema di Guida! Visualizza log degli errori per maggiori dettagli.
 
 ARBILMENUBAR\ REQUIRES\ ARBILWINDOWMANAGER.\ FOUND\ {0}=ArbilMenuBar richiede ArbilWindowManager. Trovato {0}
 
@@ -246,7 +246,7 @@ ABOUT\ TO\ REPLACE\ ALL\ VALUES\ IN\ COLUMN\ {0}\ WITH\ THE\ VALUE\ {1}(<MULTIPL
 LOGOUT\ ERROR=Errore durante il logout
 IMPORT/EXPORT\ FAVOURITES=Importa/esporta preferiti
 GROUP\ FAVOURITES\ BY\ TYPE=Raggruppa preferiti secondo tipologia
-EDIT\ THIS\ COLUMN\ VIEW=Modifica questa visualizzazione a colonne
+EDIT\ THIS\ COLUMN\ VIEW=Modifica questa vista colonna
 LIMIT\ VIEW\ TO\ CURRENT\ COLUMNS=Limita visualizzazione a colonne correnti 
 COLUMN\ VIEW\ FOR\ THIS\ TABLE=Visualizzazione a colonne per questa tabella
 COPY\ TABLE\ FOR\ WEBSITE=Copia tabella per sito web
@@ -255,7 +255,7 @@ DELETE\ FIELD\ FROM\ ALL\ NODES=Elimina campo da tutti i nodi
 THIS\ COLUMN=Questa colonna ({0})
 ALL\ COLUMNS=Tutte le colonne
 HIDE\ COLUMN=Nascondi colonna
-SAVE\ CURRENT\ COLUMN\ VIEW=Salva visualizzazione colonne corrente
+SAVE\ CURRENT\ COLUMN\ VIEW=Salva vista colonna corrente
 COULD\ NOT\ REVERT\ VERSION,\ NO\ CHANGES\ MADE=Impossibile ripristinare la versione, nessuna modifica effettuata
 FORCE\ TYPE\ CHECKING=Forza type checking
 MAKE\ COLUMN\ FIT\ CONTENTS=Adatta colonna al contenuto
