--- a/src/main/resources/nl/mpi/arbil/localisation/Widgets.properties
+++ b/src/main/resources/nl/mpi/arbil/localisation/Widgets.properties
@@ -129,7 +129,7 @@ INCONSISTENT\ NUMBER\ OF\ COLUMNS\ IN\ THE\ DATA\ TO\ PASTE=Inconsistent number 
 INCORRECT\ DATA\ TO\ PASTE=Incorrect data to paste.\nThe data must be copied either from a table where only one IMDI file is displayed\nor by selecting individual cells in the table.
 PASTE=Paste
 FIELDS\ WILL\ BE\ OVERWRITTEN\ WITH\ THE\ SINGLE\ VALUE\ ON\ THE\ CLIPBOARD=%d fields will be overwritten with the single value on the clipboard.\nContinue?
-SHOWING\ HEADER\ MENU\ FOR\ COLUMN\ {}=showing header menu for column {}\n
+SHOWING\ HEADER\ MENU\ FOR\ COLUMN\ {}=showing header menu for column {}
 NO\ ROWS\ SELECTED=No rows selected
 PASTE\ INTO\ TABLE=Paste into Table
 TABLE\ COPY=Table Copy
@@ -162,14 +162,14 @@ ADD\ WORKING\ DIRECTORY=Add Working Directory
 FAILED\ TO\ ADD\ FROM\ FAVOURITES,\ SEE\ ERROR\ LOG\ FOR\ DETAILS.=Failed to add from favourites, see error log for details.
 XSDCHECKER=XsdChecker
 TREE_VALIDATION=Validation
-VALIDATION\ WILL\ BE\ AGAINST\ THE\ FILE\ ON\ DISK.\ SAVE\ CHANGES\ FIRST?=Validation will be against the file on disk. Save changes first?\nLa validaci\u00f3n ser\u00e1 con el archivo en el disco. Guardar los cambios antes de seguir?
+VALIDATION\ WILL\ BE\ AGAINST\ THE\ FILE\ ON\ DISK.\ SAVE\ CHANGES\ FIRST?=Validation will be against the file on disk. Save changes first?
 SEARCH\ REMOTE\ CORPUS=Search Remote Corpus
 SEARCH=Search
 FAILED\ TO\ ADD\ LOCATION\ TO\ REMOTE\ CORPUS.\ SEE\ ERROR\ LOG\ FOR\ DETAILS.=Failed to add location to remote corpus. See error log for details.
 ADD\ LOCATION=Add Location
 ENTER\ THE\ URL=Enter the URL
 LOCATION\ SHOULD\ BE\ AN\ ABSOLUTE\ URI=Location should be an absolute URI. This means it should start with a scheme, for example "http://" or "file://".
-ILLEGAL\ FILE\ NAME.\ CHECK\ THE\ ERROR\ LOG\ FOR\ DETAILS.=Illegal file name. Check the error log for details.\n
+ILLEGAL\ FILE\ NAME.\ CHECK\ THE\ ERROR\ LOG\ FOR\ DETAILS.=Illegal file name. Check the error log for details.
 WARNING\:\ NO\ FILE\ EXISTS\ AT\ THE\ SPECIFIED\ LOCATION!=Warning: no file exists at the specified location!
 ERROR\ ADDING\ RESOURCE=Error adding resource
 COULD\ NOT\ ADD\ RESOURCE\ TO\ THE\ METADATA.\ CHECK\ THE\ ERROR\ LOG\ FOR\ DETAILS.=Could not add resource to the metadata. Check the error log for details.
@@ -220,8 +220,8 @@ PROFILES_DOWNLOAD\ ALL=Download all
 CLEAR\ CACHED\ COPIES\ AND\ RE-DOWNLOAD\ THE\ SELECTED\ PROFILES=Clear cached copies and re-download the selected profiles
 PROFILES_RELOAD\ SELECTION=Reload selection
 DOWNLOAD\ THE\ LATEST\ CLARIN\ PROFILES=Download the latest CMDI profiles
-TOTAL\ METADATA\ FILES\ FOUND\:\ =Total Metadata Files Found: \n
-TOOLTIP_SCHEMA\ VALIDATION\ ERROR\ (CHECK\ XML\ CONFORMANCE\ FOR\ DETAILS)=Schema validation error (Check XML Conformance for details)\n
+TOTAL\ METADATA\ FILES\ FOUND\:\ =Total Metadata Files Found: 
+TOOLTIP_SCHEMA\ VALIDATION\ ERROR\ (CHECK\ XML\ CONFORMANCE\ FOR\ DETAILS)=Schema validation error (Check XML Conformance for details)
 TOOLTIP_AVAILABLE\ IN\ THE\ FAVOURITES\ MENU=Available in the favourites menu
 TOOLTIP_UNSAVED\ CHANGES=Unsaved changes
 TOOLTIP_HISTORY\ OF\ CHANGES\ ARE\ AVAILABLE=History of changes are available
@@ -261,7 +261,7 @@ DETAILS\ >\ >=Details > >
 MORE\ OPTIONS>\ >=More options> >
 <\ <\ FEWER\ OPTIONS=< < Fewer options
 IMPORT\ BRANCH=Import Branch
-IMPORT_EXPORT_NO\ RELEVANT\ NODES\ ARE\ SELECTED=No relevant nodes are selected\n
+IMPORT_EXPORT_NO\ RELEVANT\ NODES\ ARE\ SELECTED=No relevant nodes are selected
 EXPORT\ BRANCH=Export Branch
 IMPORT=Import
 IMPORT_EXPORT_SHOW/HIDE\ DETAILED\ INFORMATION=Show/hide detailed information
@@ -274,11 +274,11 @@ EXPORT_TO\:\ =To:
 EXPORT_FROM\:\ =From: 
 SHOW\ ERRORS\ IN\ TABLE=Show errors in table
 RESOURCE\ COPY\ ERRORS=Resource Copy Errors
-IF\ COPYING\ OF\ RESOURCE\ FILES\ IS\ SELECTED,\ ANY\ FILE\ COPY\ ERRORS\ WILL\ BE\ REPORTED\ HERE=If copying of resource files is selected, any file copy errors will be reported here.\n
+IF\ COPYING\ OF\ RESOURCE\ FILES\ IS\ SELECTED,\ ANY\ FILE\ COPY\ ERRORS\ WILL\ BE\ REPORTED\ HERE=If copying of resource files is selected, any file copy errors will be reported here.
 VALIDATION\ ERRORS=Validation Errors
-WHEN\ THE\ METADATA\ FILES\ ARE\ IMPORTED\ OR\ EXPORTED\ THEY\ WILL\ BE\ VALIDATED\ (FOR\ XML\ SCHEMA\ CONFORMANCE)\ AND\ ANY\ ERRORS\ WILL\ BE\ REPORTED\ HERE=When the metadata files are imported or exported they will be validated (for XML schema conformance) and any errors will be reported here.\n
+WHEN\ THE\ METADATA\ FILES\ ARE\ IMPORTED\ OR\ EXPORTED\ THEY\ WILL\ BE\ VALIDATED\ (FOR\ XML\ SCHEMA\ CONFORMANCE)\ AND\ ANY\ ERRORS\ WILL\ BE\ REPORTED\ HERE=When the metadata files are imported or exported they will be validated (for XML schema conformance) and any errors will be reported here.
 PROCESS\ DETAILS=Process Details
-THE\ DETAILS\ OF\ THE\ IMPORT\ /\ EXPORT\ PROCESS\ WILL\ BE\ DISPLAYED\ HERE=The details of the import / export process will be displayed here.\n
+THE\ DETAILS\ OF\ THE\ IMPORT\ /\ EXPORT\ PROCESS\ WILL\ BE\ DISPLAYED\ HERE=The details of the import / export process will be displayed here.
 SHOW/HIDE\ ADDITIONAL\ OPTIONS=Show/hide additional options
 IMPORT\ RESOURCE\ FILES\ (IF\ AVAILABLE)=Import Resource Files (if available)
 EXPORT\ RESOURCE\ FILES\ (IF\ AVAILABLE)=Export Resource Files (if available)
@@ -289,7 +289,7 @@ METADATA\ FILES\ ALREADY\ IN\ LOCAL\ CORPUS\:\ =Metadata Files already in Local 
 TOTAL\ METADATA\ FILES\ PROCESSED\:\ =Total Metadata Files Processed: 
 AVAILABLE\ LANGUAGES=Available Languages
 REMOTE\ SEARCH=Remote Search
-NO\ REMOTE\ SEARCH\ TERM\ PROVIDED,\ CANNOT\ SEARCH\ REMOTELY=No remote search term provided, cannot search remotely\n
+NO\ REMOTE\ SEARCH\ TERM\ PROVIDED,\ CANNOT\ SEARCH\ REMOTELY=No remote search term provided, cannot search remotely
 PANEL_PREVIEW=Preview
 LANGUAGES_CLEAR\ SELECTION=Clear Selection
 LANGUAGES_SELECT\ ALL=Select All
@@ -323,7 +323,7 @@ SAVE=Save
 ERROR\ SAVING\ CHANGES\ TO\ DISK,\ CHECK\ THE\ LOG\ FILE\ VIA\ THE\ HELP\ MENU\ FOR\ MORE\ INFORMATION.=Error saving changes to disk, check the log file via the help menu for more information.
 UNKNOWN\ ERROR\ CREATING\ RESOURCE\ NODE\ FOR\ URI\:\ {0}=Unknown error creating resource node for URI: {0}
 ERROR\ CREATING\ RESOURCE\ NODE\ FOR\ URI\:\ {0}=Error creating resource node for URI: {0}
-COULD\ NOT\ DELETE\ NODES\ BECAUSE\ AN\ ERROR\ OCCURRED\ WHILE\ SAVING\ HISTORY\ FOR\ NODE.\ SEE\ ERROR\ LOG\ FOR\ DETAILS.=Could not delete nodes because an error occurred while saving history for node. See error log for details.\n
+COULD\ NOT\ DELETE\ NODES\ BECAUSE\ AN\ ERROR\ OCCURRED\ WHILE\ SAVING\ HISTORY\ FOR\ NODE.\ SEE\ ERROR\ LOG\ FOR\ DETAILS.=Could not delete nodes because an error occurred while saving history for node. See error log for details.
 ERROR\ WHILE\ MOVING\ NODES=Error while moving nodes
 COULD\ NOT\ MOVE\ NODES\ BECAUSE\ AN\ ERROR\ OCCURRED\ WHILE\ SAVING\ HISTORY\ FOR\ NODE.\ SEE\ ERROR\ LOG\ FOR\ DETAILS.=Could not move nodes because an error occurred while saving history for node. See error log for details.
 {0}\ ALREADY\ EXISTS\ IN\ {1}\ AND\ WILL\ NOT\ BE\ ADDED\ AGAIN={0} already exists in {1} and will not be added again
@@ -348,7 +348,7 @@ DELETE\ %D\ NODES\ FROM\ THEIR\ PARENT\ '%S'?=Delete %d nodes from their parent 
 DELETE\ THE\ NODE\ '%S'\ FROM\ ITS\ PARENT\ '%S'?=Delete the node '%s' from its parent '%s'?\nThis will save pending changes.
 CANNOT\ COPY\ {0}\ TO\ {1}="Cannot copy '{0}' to '{1}'"
 FOUND\ MORE\ RESULTS\ THAN\ CAN\ BE\ DISPLAYED,\ ONLY\ SHOWING\ THE\ FIRST\ {0}\ RESULTS=Found more results than can be displayed, only showing the first {0} results
-CANNOT\ SEARCH\ {0}\ BECAUSE\ IT\ DOES\ NOT\ HAVE\ AN\ ARCHIVE\ HANDLE=Cannot search "{0}" because it does not have an archive handle\n
+CANNOT\ SEARCH\ {0}\ BECAUSE\ IT\ DOES\ NOT\ HAVE\ AN\ ARCHIVE\ HANDLE=Cannot search "{0}" because it does not have an archive handle
 DELETE\ FROM\ PARENT=Delete from parent
 #{0} is number of locations that failed to load
 FAILED\ TO\ LOAD\ {0}\ LOCATIONS.\ SEE\ ERROR\ LOG\ FOR\ DETAILS.=Failed to load {0} locations. See error log for details.
