--- a/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Widgets_es.properties
+++ b/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Widgets_es.properties
@@ -1,7 +1,7 @@
 # To change this template, choose Tools | Templates
 # and open the template in the editor.
 
-CLARIN\ INSTANCE=Ejemplo de Clarin
+CLARIN\ INSTANCE=Ejemplo Clarin
 CATALOGUE=Cat\u00e1logo
 SESSION=Sesi\u00f3n
 \ (LOADING)=\ (cargando)
@@ -10,7 +10,7 @@ DELETE\ NODE=Eliminar nodo
 ERROR\ DELETING\ NODE,\ CHECK\ THE\ LOG\ FILE\ VIA\ THE\ HELP\ MENU\ FOR\ MORE\ INFORMATION.=Error en la eliminaci\u00f3n del nodo, ver registro de errores en el menu Gu\u00eda para m\u00e1s informaciones.
 FAILED\ TO\ LOAD\ {0}\ LOCATIONS.\ SEE\ ERROR\ LOG\ FOR\ DETAILS.=Impossible de charger {0} emplacements. Consultez le journal des erreurs pour plus de d\u00e9tails.
 ERROR=Error
-COULD\ NOT\ FIND\ OR\ LOAD\ LOCATIONS.\ ADDING\ DEFAULT\ LOCATIONS.=No se pudo encontrar o cargar ubicaciones. Se a\u00f1adir\u00e1n las ubicaciones predeterminadas.
+COULD\ NOT\ FIND\ OR\ LOAD\ LOCATIONS.\ ADDING\ DEFAULT\ LOCATIONS.=No se pudieron encontrar o cargar las ubicaciones. Se a\u00f1adir\u00e1n las ubicaciones predeterminadas.
 FAVOURITES=Favoritos
 WORKING\ DIRECTORIES=Directorios de trabajo
 REMOTE\ CORPUS=Corpus remoto
@@ -23,12 +23,12 @@ VIEW\ IMDI\ XML=Ver IMDI en XML
 THE\ NODE\ MUST\ BE\ SAVED\ FIRST.SAVE\ NOW?=El nodo necesita ser guardado antes de seguir.\n\u00bfGuardar ahora?
 FAILED\ TO\ OPEN\ THE\ REMOTE\ LOCATION\:\ {0}=No se pudo abrir la ubicaci\u00f3n remota: {0}
 OPEN\ IN\ EXTERNAL\ APPLICATION=Abrir en aplicaci\u00f3n externa
-FAILED\ TO\ OPEN\ THE\ FILE.\ PLEASE\ CHECK\ THAT\ IT\ IS\ ACCESSIBLE\ AND\ HAS\ AN\ APPLICATION\ ASSOCIATED\ WITH\ IT.DO\ YOU\ WANT\ TO\ OPEN\ THE\ PARENT\ DIRECTORY?=No se pudo abrir el archivo. Comprobar que \u00e9ste sea asequible y que est\u00e9 asociado a una aplicaci\u00f3n.\n\n\u00bfAbrir el directorio primario?
+FAILED\ TO\ OPEN\ THE\ FILE.\ PLEASE\ CHECK\ THAT\ IT\ IS\ ACCESSIBLE\ AND\ HAS\ AN\ APPLICATION\ ASSOCIATED\ WITH\ IT.DO\ YOU\ WANT\ TO\ OPEN\ THE\ PARENT\ DIRECTORY?=No se pudo abrir el archivo. Comprobar que \u00e9ste sea accesible y que est\u00e9 asociado a una aplicaci\u00f3n.\n\n\u00bfAbrir el directorio primario?
 FAILED\ TO\ FIND\ THE\ FILE\:\ {0}=No se pudo encontrar el archivo: {0}
 SELECTION=Selecci\u00f3n
 DIRECTORIES=Directorios
 METADATA\ FILES=Archivos de metadatos
-THE\ SELECTED\ EXPORT\ DIRECTORY\ IS\ NOT\ EMPTY.\ ON\ EXPORT,\ YOU\ WILL\ HAVE\ THE\ CHOICE\ TO\ EITHER\ OVERRIDE\ OR\ CREATE\ DUPLICATES\ OF\ ANY\ PRESENT\ FILES.DO\ YOU\ WANT\ TO\ CONTINUE?=El directorio de exportaci\u00f3n seleccionado no est\u00e1 vac\u00edo. Al exportar, habr\u00e1 que elegir entre reemplazar o crear duplicados de los posibles archivos presentes.\n\u00bfContinuar?
+THE\ SELECTED\ EXPORT\ DIRECTORY\ IS\ NOT\ EMPTY.\ ON\ EXPORT,\ YOU\ WILL\ HAVE\ THE\ CHOICE\ TO\ EITHER\ OVERRIDE\ OR\ CREATE\ DUPLICATES\ OF\ ANY\ PRESENT\ FILES.DO\ YOU\ WANT\ TO\ CONTINUE?=El directorio de exportaci\u00f3n seleccionado no est\u00e1 vac\u00edo. Al exportar, habr\u00e1 que \nelegir entre reemplazar o crear duplicados de los posibles archivos presentes.\n\u00bfContinuar?
 THE\ EXPORT\ DIRECTORY\ {0}\ DOES\ NOT\ EXIST.PLEASE\ SELECT\ OR\ CREATE\ A\ DIRECTORY.=El directorio de exportaci\u00f3n\n"{0}"\nno existe.\nSeleccionar o crear un directorio.
 \ DESTINATION\ DIRECTORY=Directorio de destino
 SAVE\ CHANGES=Guardar los cambios
@@ -37,22 +37,22 @@ ERROR\ WHILE\ TRYING\ TO\ SHOW\ LICENSE.\ SEE\ ERROR\ LOG\ FOR\ DETAILS.=Error e
 LICENSE=Licencia
 ABOUT\ {0}=Sobre {0}
 CLOSE=Cerrar
-DISPLAY\ LICENSE=Ver licencia
-ABOUTBOXTEXT=
-SAVE\ TO\ DISK?=
-FAILED\ TO\ LOAD\ {0}\ LOCATIONS.\ SEE\ ERROR\ LOG\ FOR\ DETAILS.",\ "WARNING=No se pudo cargar {0} ubicaciones. Ver registro de errores para m\u00e1s detalles.
+DISPLAY\ LICENSE=Mostrar licencia
+ABOUTBOXTEXT=Archive Builder\nUna herramienta local para la organizaci\u00f3n de datos ling\u00fc\u00edsticos.\nMax Planck Institute for Psycholinguistics\n\nAplicaci\u00f3n dise\u00f1ada y desarrollada por {0}\nMantenimiento y extensiones por {1}\nArbil utiliza tambi\u00e9n componentes de IMDI API y de Lamus Type Checker\n\nVersi\u00f3n: {2} {3} {4}\nProveedor: {8}\nJVM: {9} {10}\nSistema operativo: {11} {12} {13})\n\nCopyright (C) {14} Max Planck Institute for Psycholinguistics\n\nLa licencia da Arbil ha sido concedida por la GNU General Public License versi\u00f3n 2.\nHacer un click en el bot\u00f3n aqu\u00ed abajo para ver la versi\u00f3n completa de esta licencia.
+SAVE\ TO\ DISK?=\u00bfGuardar en el disco?
+FAILED\ TO\ LOAD\ {0}\ LOCATIONS.\ SEE\ ERROR\ LOG\ FOR\ DETAILS.",\ "WARNING=No se pudieron cargar {0} ubicaciones. Ver registro de errores para m\u00e1s detalles.
 THIS\ ACTION\ WILL\ SAVE\ ALL\ PENDING\ CHANGES\ ON\ {0}\ TO\ DISK.\ CONTINUE?=Todos los cambios pendientes a {0} se guardar\u00e1n en el disco. \u00bfContinuar?
-FIELD\ NAME=Nombre campo
+FIELD\ NAME=Nombre del campo
 VALUE=Valor
 RESOURCE=Recurso
 NOT\ SUPPORTED=No compatible
 MOVING\ IMDI\ METADATA\ TO\ CMDI\ METADATA\ FILES\ IS\ CURRENTLY\ NOT\ SUPPORTED=Todav\u00eda no se pueden transferir los metadatos IMDI a los archivos de metadatos CMDI
 INSERT\ NODE\ ERROR=Error en la inserci\u00f3n del nodo
-ERROR\ MOVING\ NODES=Error en la transferencia de los nodos
-COULD\ NOT\ MOVE\ %S\ DUE\ TO\ ERROR.\ SEE\ LOG\ FOR\ DETAILS.\ CONTINUE\ MOVING\ NODES?=No se pudo transferir %s por un error. Ver registro de errores para m\u00e1s detalles. \u00bfSeguir transferiendo los nodos?
-CANCEL=Eliminar
+ERROR\ MOVING\ NODES=Error al mover nodos
+COULD\ NOT\ MOVE\ %S\ DUE\ TO\ ERROR.\ SEE\ LOG\ FOR\ DETAILS.\ CONTINUE\ MOVING\ NODES?=No se pudo mover %s por un error. Ver registro de errores para m\u00e1s detalles. \u00bfSeguir moviendo nodos?
+CANCEL=Cancelar
 ABORT=Anular
-SKIP=Omitir
+SKIP=Saltar
 MOVE\ ALL=Mover todo
 MOVE=Mover
 MOVE_SOURCE_NODE_TO_TARGET_NODE=\u00bfMover %s a %s?
@@ -61,10 +61,10 @@ SELECT\ NODES\ TO\ EXPORT=Seleccionar nodos para exportar
 NO\ NODES\ ARE\ SELECTED.\ SELECT\ AT\ LEAST\ ONE\ NODE\ TO\ EXPORT.=Ning\u00fan nodo ha sido seleccionado. Seleccionar como m\u00ednimo un nodo para exportar.
 AN\ ERROR\ OCCURRED\ WHILE\ EXPORTING\ FAVOURITES=Se ha producido un error en la exportaci\u00f3n de los favoritos:\n%s.\nVer registro de errores para m\u00e1s detalles.
 EXPORT\ COMPLETE=Exportaci\u00f3n completada
-FAVOURITES\ HAVE\ BEEN\ EXPORTED=Los favoritos se han exportado correctamente
-FAVOURITES_AN\ ERROR\ OCCURRED\ WHILE\ IMPORTING\ FAVOURITES=Se ha producido un error en la exportaci\u00f3n de los favoritos:\n%s.\nVer registro de errores para m\u00e1s detalles.
+FAVOURITES\ HAVE\ BEEN\ EXPORTED=Los favoritos han sido exportados correctamente
+FAVOURITES_AN\ ERROR\ OCCURRED\ WHILE\ IMPORTING\ FAVOURITES=Se ha producido un error en la importaci\u00f3n de los favoritos:\n%s.\nVer registro de errores para m\u00e1s detalles.
 IMPORT\ COMPLETE=Importaci\u00f3n completada
-FAVOURITES\ HAVE\ BEEN\ IMPORTED=Los favoritos se han importado correctamente
+FAVOURITES\ HAVE\ BEEN\ IMPORTED=Los favoritos han sido importados correctamente
 SELECT\ FAVOURITES\ EXPORT\ TO\ IMPORT=Seleccionar los favoritos exportados para importar
 FAVOURITES\ EXPORT\ FILE=Archivo de exportaci\u00f3n de los favoritos
 EXPORT\ SELECTION=Exportar selecci\u00f3n
