--- a/src/main/resources/nl/mpi/arbil/localisation/Widgets.properties
+++ b/src/main/resources/nl/mpi/arbil/localisation/Widgets.properties
@@ -45,7 +45,7 @@ FIELD\ NAME=Field Name
 VALUE=Value
 RESOURCE=Resource
 NOT\ SUPPORTED=Not supported
-MOVING\ IMDI\ METADATA\ TO\ CMDI\ METADATA\ FILES\ IS\ CURRENTLY\ NOT\ SUPPORTED=Moving IMDI metadata to CMDI metadata files is currently not supported\n
+MOVING\ IMDI\ METADATA\ TO\ CMDI\ METADATA\ FILES\ IS\ CURRENTLY\ NOT\ SUPPORTED=Moving IMDI metadata to CMDI metadata files is currently not supported
 INSERT\ NODE\ ERROR=Insert node error
 ERROR\ MOVING\ NODES=Error moving nodes
 COULD\ NOT\ MOVE\ %S\ DUE\ TO\ ERROR.\ SEE\ LOG\ FOR\ DETAILS.\ CONTINUE\ MOVING\ NODES?=Could not move %s due to error. See log for details. Continue moving nodes?
