--- a/src/main/resources/nl/mpi/arbil/localisation/Menus.properties
+++ b/src/main/resources/nl/mpi/arbil/localisation/Menus.properties
@@ -291,3 +291,5 @@ FORCE\ TYPE\ CHECKING=Force Type Checking
 SHOW\ LOG\ CONSOLE=Show log console
 #Tooltip shown on disable log console menu item in the Help menu
 LOG\ CONSOLE\ NOT\ AVAILABLE\ WEB\ START=The log console is not available when running as Web Start application
+#Checkbox menu item to toggle view option for tree structure (verbatim/compact)
+MENU\ OPTION\ VERBATIM\ XML\ STRUCTURE\ IN\ TREE=Show verbatim XML structure in tree
