checked the Spanish translation of the widgets

--- a/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Widgets.properties
+++ b/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Widgets.properties
@@ -87,7 +87,7 @@ INITIALIZING...=initializing...
 <SELECT>=<select>
 FINISH=Finish
 ARBIL\ WIZARD=Arbil wizard
-DO\ YOU\ REALLY\ WANT\ TO\ CANCEL\ THE\ WIZARD?=Do you really want to cancel the wizard?\n
+DO\ YOU\ REALLY\ WANT\ TO\ CANCEL\ THE\ WIZARD?=Do you really want to cancel the wizard?
 ERROR\ WHILE\ GETTING\ WIZARD\ TEXT.\ PLEASE\ CHECK\ THE\ ERROR\ LOG.=Error while getting wizard text. Please check the error log. 
 DISCARD\ CHANGES=Discard changes
 DOING\ THIS\ WILL\ RESET\ THE\ LIST\ OF\ REMOTE\ LOCATIONS.\ DO\ YOU\ WANT\ TO\ GO\ BACK\ A\ STEP\ IN\ THE\ WIZARD?=Doing this will reset the list of remote locations. Do you want to go back a step in the wizard?
