--- a/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Widgets_it.properties
+++ b/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Widgets_it.properties
@@ -174,8 +174,8 @@ RE\ IMPORT\ BRANCH=Importa di nuovo il ramo
 ADDING\ A\ NODE\ WILL\ SAVE\ PENDING\ CHANGES=Aggiungendo un nodo, le modifiche a "%s" ancora in sospeso verranno salvate sul disco. Procedere?
 PROFILES_REFRESH\ LIST=Aggiorna elenco
 PAGE\ NOT\ FOUND=Pagina non trovata
-CONTENTS=Contenuti
-HELP\ CONTENTS\ NOT\ FOUND=Impossibile trovare i contenuti della Guida
+CONTENTS=Sommario
+HELP\ CONTENTS\ NOT\ FOUND=Impossibile trovare il sommario della Guida
 HELP=Guida
 HELP\ VIEWER=Visualizzatore Guida
 OVERVIEW=Informazioni generali
@@ -192,7 +192,7 @@ ELIPSIS=...
 SUITABLE\ FAVOURITES=Preferiti appropriati
 CUSTOM\ PROFILE=Profilo personalizzato
 RESTART\ ARBIL=Riavvia Arbil
-THE\ PROFILES\ HAVE\ BEEN\ RE-DOWNLOADED.\ YOU\ NEED\ TO\ RESTART\ ARBIL\ IN\ ORDER\ TO\ APPLY\ ANY\ CHANGES.=I profili sono stati riscaricati. Riavviare Arbil per rendere effettive le eventuali modifiche.
+THE\ PROFILES\ HAVE\ BEEN\ RE-DOWNLOADED.\ YOU\ NEED\ TO\ RESTART\ ARBIL\ IN\ ORDER\ TO\ APPLY\ ANY\ CHANGES.=I profili sono stati riscaricati. Riavviare Arbil per applicare le eventuali modifiche.
 PROFILES_LOADPROFILES=Carica profili
 PROFILES_LOADING,\ PLEASE\ WAIT...=Caricamento in corso, attendere prego...
 SELECT\ PROFILE=Seleziona profilo
@@ -220,7 +220,7 @@ TOOLTIP_LOCAL\ FILE\ (EDITABLE)=File locale (modificabile)
 TOOLTIP_RESOURCE\ FILE\ NOT\ FOUND=Impossibile trovare il file di risorse
 TOOLTIP_REMOTE\ FILE\ (READ\ ONLY)=File remoto (di sola lettura)
 TOOLTIP_COPIES\ ON\ SERVER\:\ ?=Copie sul server: ?
-TOOLTIP_COPIES\ ON\ LOCAL\ FILE\ SYSTEM\:\ {0}=Copie sul sistema di file locale: {0}
+TOOLTIP_COPIES\ ON\ LOCAL\ FILE\ SYSTEM\:\ {0}=Copie sul sistema di file locali: {0}
 TOOLTIP_COPIES\ IN\ CACHE\:\ {0}=Copie nella cache: {0}
 TOOLTIP_STATUS\:\ {0}=Stato: {0}
 TOOLTIP_TYPE\ CHECKER\ MESSAGE=Messaggio del type checker:\n"{0}"
@@ -256,7 +256,7 @@ IMPORT=Importa
 IMPORT_EXPORT_SHOW/HIDE\ DETAILED\ INFORMATION=Mostra/nascondi informazioni dettagliate
 IMPORT_EXPORT_START=Avvia
 IMPORT_EXPORT_STOP=Interrompi
-IMPORT_EXPORT_SHIBBOLETH\ AUTHENTICATION\ VIA\ THE\ SURFNET\ METHOD=Autenticazione Shibboleth tramite metodo SURFnet
+IMPORT_EXPORT_SHIBBOLETH\ AUTHENTICATION\ VIA\ THE\ SURFNET\ METHOD=Autenticazione Shibboleth con metodo SURFnet
 IMPORT_EXPORT_LIMIT\ CHARACTERS\ IN\ FILE\ NAMES\ (LAMUS\ FRIENDLY\ FORMAT)=Limita caratteri nei nomi dei file (formato adatto a LAMUS)
 IMPORT_EXPORT_RENAME\ METADATA\ FILES\ (TO\ MATCH\ LOCAL\ CORPUS\ TREE\ NAMES)=Rinomina file di metadati (devono corrispondere ai nomi dell'albero del corpus locale)
 SHOW\ ERRORS\ IN\ TABLE=Mostra errori nella tabella
@@ -272,7 +272,7 @@ EXPORT\ RESOURCE\ FILES\ (IF\ AVAILABLE)=Esporta file di risorse (se disponibili
 RESOURCE\ FILE\ COPY\ ERRORS\:\ =Errori nella copia del file di risorse:
 METADATA\ FILE\ VALIDATION\ ERRORS\:\ =Errori nella convalida del file di metadati:
 METADATA\ FILE\ COPY\ ERRORS\:\ =Errori nella copia del file di metadati:
-METADATA\ FILES\ ALREADY\ IN\ LOCAL\ CORPUS\:\ =I file di metadati esistono gi\u00e0 nel corpus locale:
+METADATA\ FILES\ ALREADY\ IN\ LOCAL\ CORPUS\:\ =File di metadati gi\u00e0 presenti nel corpus locale:
 TOTAL\ METADATA\ FILES\ PROCESSED\:\ =File di metadati elaborati in totale:
 AVAILABLE\ LANGUAGES=Lingue disponibili
 REMOTE\ SEARCH=Ricerca remota
@@ -296,7 +296,7 @@ HISTORY_LAST\ SAVE=Ultimo salvataggio
 COPY\ OF\ {0}=copia di {0}
 FILE\ NOT\ FOUND=File non trovato
 COULD\ NOT\ LOAD\ DATA=Impossibile caricare i dati
-MISSING\ FILE\ HAS\ BEEN\ RECOVERED\ FROM\ THE\ LAST\ HISTORY\ ITEM.=Il file mancante \u00e8 stato recuperato dall'ultimo elemento della cronologia
+MISSING\ FILE\ HAS\ BEEN\ RECOVERED\ FROM\ THE\ LAST\ HISTORY\ ITEM.=Il file mancante \u00e8 stato recuperato dall'ultimo elemento della cronologia.
 RECOVER\ HISTORY=Recupera cronologia
 COULD\ NOT\ COPY\ FILE\ WHEN\ RECOVERING\ FROM\ THE\ LAST\ HISTORY\ FILE.=Impossibile copiare il file durante il recupero dall'ultimo file della cronologia.
 {0}.\ HISTORY\ MAY\ BE\ BROKEN\ FOR\ {1}={0}: la cronologia potrebbe essere interrotta per {1}
@@ -317,7 +317,7 @@ THE\ TARGET\ FILE\ IS\ NOT\ IN\ THE\ CACHE=Il file di destinazione non \u00e8 ne
 CANNOT\ PASTE\ SESSION\ SUBNODES\ INTO\ A\ CORPUS=Impossibile incollare i sottonodi della sessione in un corpus
 THE\ TARGET\ NODE'S\ FILE\ DOES\ NOT\ EXIST=Il file di destinazione del nodo non esiste
 COPYING\ WITH\ UNSAVED\ CHANGES=Copia in corso con modifiche non salvate
-SOME\ OF\ THE\ NODES\ TO\ BE\ COPIED\ CONTAIN\ UNSAVED\ CHANGES=Alcuni dei nodi da copiare contengono modifiche non salvate.\nSe non salvate, tali modifiche non verranno visualizzate nei nodi risultanti.\nContinuare comunque?
+SOME\ OF\ THE\ NODES\ TO\ BE\ COPIED\ CONTAIN\ UNSAVED\ CHANGES=Alcuni dei nodi da copiare contengono modifiche non salvate.\nSe non salvate, tali modifiche non verranno visualizzate nei nodi risultanti. Continuare comunque?
 THE\ LOCATION\ ALREADY\ EXISTS\ AND\ CANNOT\ BE\ ADDED\ AGAIN=La postazione esiste gi\u00e0 e non verr\u00e0 aggiunta nuovamente
 DELETE=Elimina
 DELETE\ {0}\ NODES?=Eliminare {0} nodi?
@@ -333,4 +333,4 @@ DELETE\ FROM\ PARENT=Elimina da nodo padre
 COULD\ NOT\ DELETE\ NODE\ BECAUSE\ IT\ HAS\ NO\ PARENT=Impossibile eliminare il nodo perch\u00e9 senza nodo padre
 EXPORT_TO\:\ =A:
 EXPORT_FROM\:\ =Da:
-<P><STRONG>I/O\ EXCEPTION\ WHILE\ READING\ HELP\ CONTENTS</STRONG></P>=<p><strong>eccezione I/O durante la lettura dei contenuti della Guida</strong></p>
+<P><STRONG>I/O\ EXCEPTION\ WHILE\ READING\ HELP\ CONTENTS</STRONG></P>=<p><strong>eccezione I/O durante la lettura del contenuto della guida</strong></p>
