--- a/src/main/resources/nl/mpi/arbil/localisation/Menus.properties
+++ b/src/main/resources/nl/mpi/arbil/localisation/Menus.properties
@@ -292,4 +292,8 @@ SHOW\ LOG\ CONSOLE=Show log console
 #Tooltip shown on disable log console menu item in the Help menu
 LOG\ CONSOLE\ NOT\ AVAILABLE\ WEB\ START=The log console is not available when running as Web Start application
 #Checkbox menu item to toggle view option for tree structure (verbatim/compact)
-MENU\ OPTION\ VERBATIM\ XML\ STRUCTURE\ IN\ TREE=Show verbatim XML structure in tree
+MENU\ OPTION\ VERBATIM\ XML\ STRUCTURE\ IN\ TREE=Show verbatim XML structure in tree for CMDI
+#Tooltip for the 'show verbatim XML structure' menu option
+MENU\ OPTION\ VERBATIM\ XML\ STRUCTURE\ TOOLTIP=If selected, the corpus trees will follow the structure of CMDI documents without any merging or compacting
+#Confirmation dialogue after 'verbatim xml' option in options menu of the menu bar was chosen
+MENU\ SWITCH\ XML\ VERBATIM\ STRUCTURE\ CONFIRM=You chose to switch the way metadata documents are displayed in the tree.\nDoing so will cause a reload of all nodes currently loaded. Do you want to continue?
