--- a/src/main/resources/nl/mpi/arbil/localisation/Widgets.properties
+++ b/src/main/resources/nl/mpi/arbil/localisation/Widgets.properties
@@ -99,12 +99,14 @@ SETUP_NO\ PROFILES\ SELECTED=No profiles selected
 SETUP_YOU\ HAVE\ NOT\ YET\ SELECTED\ PROFILES\ TO\ USE.\ ARE\ YOU\ SURE\ YOU\ WANT\ TO\ CONTINUE?=You have not yet selected profiles to use. Are you sure you want to continue?
 SETUP_CLARIN\ PROFILES=Clarin Profiles
 CANCEL\ WIZARD=Cancel wizard
-FIELD_VIEW_TABLE_SHOW\ ONLY\ CHECKED\ FIELDS\ (HIDES\ ALL\ OTHERS\ AND\ OVERRIDES\ HIDE\ FIELDS)=Show only checked fields (hides all others and overrides hide fields)
+#tool tip for 'show' checkboxes in 'edit field views' dialogue
+FIELD_VIEW_TABLE_SHOW\ ONLY\ CHECKED\ FIELDS\ (HIDES\ ALL\ OTHERS\ AND\ OVERRIDES\ HIDE\ FIELDS)=Show only checked fields (hides all others and overrides 'hide fields')
 FIELD_VIEW_TABLE_INVALID\ WIDTH\ FOR\ COLUMN\ {0}=Invalid width for column {0}
 FIELD_VIEW_TABLE_COLUMN\ WIDTH=Column width
 FIELD_VIEW_TABLE_HIDE=Hide
 FIELD_VIEW_TABLE_SHOW\ ONLY=Show Only
 FIELD_VIEW_TABLE_COLUMN\ NAME=Column Name
+#tool tip for 'hide' checkboxes in 'edit field views' dialogue
 FIELD_VIEW_TABLE_HIDE\ CHECKED\ FIELDS\ (ONLY\ ACTIVE\ WHEN\ NO\ 'SHOW\ ONLY'\ SELECTION\ IS\ MADE)=Hide checked fields (only active when no 'show only' selection is made) 
 ARBIL\ LOG\ CONSOLE=Arbil log console
 #button text, imperative (stop search)
@@ -126,7 +128,7 @@ CONTINUE?=Continue?
 THERE\ ARE\ x\ FIELDS\ THAT\ WILL\ HAVE\ THEIR\ CONTENTS\ DELETED\ BY\ THIS\ PASTE\ ACTION=There are {0} fields that will have their contents deleted by this paste action.\n\n
 TWO\ FIELDS\ OF\ THE\ SAME\ NAME\ ARE\ TO\ BE\ PASTED=Two fields of the same name are to be pasted into this table,\nthis will cause at least one field to be overwritten by another.\n
 INCONSISTENT\ NUMBER\ OF\ COLUMNS\ IN\ THE\ DATA\ TO\ PASTE=Inconsistent number of columns in the data to paste.\nThe pasted data could be incorrect.
-INCORRECT\ DATA\ TO\ PASTE=Incorrect data to paste.\nThe data must be copied either from a table where only one IMDI file is displayed\nor by selecting individual cells in the table.
+INCORRECT\ DATA\ TO\ PASTE=Incorrect data to paste.\nThe data must be copied either from a table with a single node\nor by selecting individual cells in the table.
 PASTE=Paste
 FIELDS\ WILL\ BE\ OVERWRITTEN\ WITH\ THE\ SINGLE\ VALUE\ ON\ THE\ CLIPBOARD=%d fields will be overwritten with the single value on the clipboard.\nContinue?
 SHOWING\ HEADER\ MENU\ FOR\ COLUMN\ {}=showing header menu for column {}
