Some improvements to verbatim xml tree structure switch: save changes before reload and reload only metadata Refs #1153

--- a/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Menus.properties
+++ b/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Menus.properties
@@ -296,4 +296,4 @@ MENU\ OPTION\ VERBATIM\ XML\ STRUCTURE\ IN\ TREE=Show verbatim XML structure in 
 #Tooltip for the 'show verbatim XML structure' menu option
 MENU\ OPTION\ VERBATIM\ XML\ STRUCTURE\ TOOLTIP=If selected, the corpus trees will follow the structure of CMDI documents without any merging or compacting
 #Confirmation dialogue after 'verbatim xml' option in options menu of the menu bar was chosen
-MENU\ SWITCH\ XML\ VERBATIM\ STRUCTURE\ CONFIRM=You chose to switch the way metadata documents are displayed in the tree.\nDoing so will cause a reload of all nodes currently loaded. Do you want to continue?
+MENU\ SWITCH\ XML\ VERBATIM\ STRUCTURE\ CONFIRM=You chose to switch the way metadata documents are displayed in the tree.\nDoing so will cause a save and reload of all nodes currently loaded. Do you want to continue?
